--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-cayman
+
+github:
+  repository_url: https://github.com/QPPQLivingReview/QPPQLivingReview.github.io/tree/gh-pages
