--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-cayman
-
 github:
-  repository_url: https://github.com/QPPQLivingReview/QPPQLivingReview.github.io/tree/gh-pages
+  is_project_page: true
