Revert "Fix after #1"

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: A Living Review of Quantum Computing for Plasma Physics
+name: A Living Review of Quantum Computing for Plasma Physics
 theme: jekyll-theme-cayman
 github:
   is_project_page: true
