try markdown: GFM

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: A Living Review of Quantum Computing for Plasma Physics
 theme: jekyll-theme-cayman
+markdown: GFM
 github:
   is_project_page: true
